--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
           <div class="filter-content">
             <div class="filter-item">
               <label for="min-distance-slider">Minimum Distance:</label>
-              <input type="range" id="min-distance-slider" min="0" max="100" value="0" />
-              <input type="number" id="min-distance-number" name="min-distance" min="0" max="100" value="0" />
+              <input type="range" id="min-distance-slider" min="0" max="100" step="1" value="0" />
+              <input type="number" id="min-distance-number" name="min-distance" min="0" max="100" step="1" value="0" />
             </div>
             <div class="filter-item">
               <label for="max-distance-slider">Maximum Distance:</label>
-              <input type="range" id="max-distance-slider" min="0" max="100" value="20" />
-              <input type="number" id="max-distance-number" name="max-distance" min="0" max="100" value="20" />
+              <input type="range" id="max-distance-slider" min="0" max="100" step="1" value="20" />
+              <input type="number" id="max-distance-number" name="max-distance" min="0" max="100" step="1" value="20" />
             </div>
           </div>
         </fieldset>
@@ -120,7 +120,7 @@
               <label for="enable-connections">Enable Connections</label>
             </div>
             <div class="filter-item">
-              <input type="range" id="connection-slider" name="connections" min="1" max="50" value="7" disabled />
+              <input type="range" id="connection-slider" name="connections" min="1" max="50" step="1" value="7" disabled />
               <span id="connection-value">7</span> Light Years
             </div>
           </div>
@@ -136,40 +136,40 @@
             </div>
             <div class="filter-item">
               <label for="low-density-slider">Isolation Distance (LY):</label>
-              <input type="range" id="low-density-slider" name="low-density" min="1" max="20" value="7" disabled />
-              <input type="number" id="low-density-number" name="low-density" min="1" max="20" value="7" disabled />
+              <input type="range" id="low-density-slider" name="low-density" min="1" max="20" step="1" value="7" disabled />
+              <input type="number" id="low-density-number" name="low-density" min="1" max="20" step="1" value="7" disabled />
               <span id="low-density-value">7</span> LY
             </div>
             <div class="filter-item">
               <label>Ignore this many closest stars: <span id="low-tolerance-value">0</span></label>
-              <input type="range" id="low-tolerance-slider" name="low-tolerance" min="0" max="10" value="0" disabled />
+              <input type="range" id="low-tolerance-slider" name="low-tolerance" min="0" max="10" step="1" value="0" disabled />
             </div>
             <!-- Low Density Cluster Labeling & Segmentation toggle -->
             <div class="filter-item">
               <input type="checkbox" id="enable-low-density-labeling" name="enable-low-density-labeling" />
               <label for="enable-low-density-labeling">Enable Low Density Cluster Labeling &amp; Segmentation</label>
             </div>
-            <!-- Adjusted: Low Density Grid-Size Slider (0.01..10, step=0.01) -->
+            <!-- Grid Subdivision (levels 1..10). We'll map behind the scenes to 0.005..5.0. -->
             <div class="filter-item">
-              <label for="low-density-grid-slider">Grid Subdivision:</label>
+              <label for="low-density-grid-slider">Grid Subdivision (Level):</label>
               <input 
                 type="range" 
                 id="low-density-grid-slider" 
                 name="low-density-grid-size" 
-                min="0.01" 
+                min="1" 
                 max="10" 
-                step="0.01" 
-                value="2" 
+                step="1" 
+                value="5" 
                 disabled
               />
               <input 
                 type="number" 
                 id="low-density-grid-number" 
                 name="low-density-grid-size" 
-                min="0.01" 
+                min="1" 
                 max="10" 
-                step="0.01" 
-                value="2" 
+                step="1" 
+                value="5" 
                 disabled
               />
             </div>
@@ -184,16 +184,16 @@
               <input type="checkbox" id="enable-high-density-mapping" name="enable-high-density-mapping" />
               <label for="enable-high-density-mapping">Enable High Density Mapping</label>
             </div>
+            <!-- We'll keep the old "distance" slider or remove it? Let's keep it for now, with step=1. -->
             <div class="filter-item">
-              <!-- "X" distance slider (0.01..10, step=0.01). Default = 1 -->
               <label for="high-density-slider">Distance X (LY):</label>
               <input 
                 type="range" 
                 id="high-density-slider" 
                 name="high-density" 
-                min="0.01" 
-                max="10" 
-                step="0.01" 
+                min="1" 
+                max="20" 
+                step="1" 
                 value="1" 
                 disabled
               />
@@ -201,15 +201,15 @@
                 type="number" 
                 id="high-density-number" 
                 name="high-density" 
-                min="0.01" 
-                max="10" 
-                step="0.01" 
+                min="1" 
+                max="20" 
+                step="1" 
                 value="1" 
                 disabled
               />
               <span id="high-density-value">1</span> LY
             </div>
-            <!-- New: "Y" star-count slider; default = 1. No tolerance slider. -->
+            <!-- "Y" star-count slider => step=1. -->
             <div class="filter-item">
               <label for="high-density-count-slider">Minimum Stars Y:</label>
               <input 
@@ -218,7 +218,7 @@
                 name="high-density-count" 
                 min="1" 
                 max="200" 
-                step="1" 
+                step="1"
                 value="1" 
                 disabled
               />
@@ -229,27 +229,27 @@
               <input type="checkbox" id="enable-high-density-labeling" name="enable-high-density-labeling" />
               <label for="enable-high-density-labeling">Enable High Density Cluster Labeling &amp; Segmentation</label>
             </div>
-            <!-- Adjusted: High Density Grid-Size Slider (0.01..10, step=0.01) -->
+            <!-- Grid Subdivision (levels 1..10). We'll ignore it for the octree approach, or keep? We'll keep it but do nothing. -->
             <div class="filter-item">
-              <label for="high-density-grid-slider">Grid Subdivision:</label>
+              <label for="high-density-grid-slider">Grid Subdivision (Level):</label>
               <input 
                 type="range" 
                 id="high-density-grid-slider" 
                 name="high-density-grid-size" 
-                min="0.01" 
+                min="1" 
                 max="10" 
-                step="0.01" 
-                value="2" 
+                step="1"
+                value="5" 
                 disabled
               />
               <input 
                 type="number" 
                 id="high-density-grid-number" 
                 name="high-density-grid-size" 
-                min="0.01" 
+                min="1" 
                 max="10" 
-                step="0.01" 
-                value="2" 
+                step="1" 
+                value="5" 
                 disabled
               />
             </div>
@@ -303,7 +303,7 @@
       document.getElementById('connection-slider').disabled = !this.checked;
     });
 
-    // Enable/disable low density mapping sliders
+    // Low density toggles
     document.getElementById('enable-low-density-mapping').addEventListener('change', function() {
       const lowEnabled = this.checked;
       document.getElementById('low-density-slider').disabled = !lowEnabled;
@@ -313,7 +313,7 @@
       document.getElementById('low-density-grid-number').disabled = !lowEnabled;
     });
 
-    // Enable/disable high density mapping sliders
+    // High density toggles
     document.getElementById('enable-high-density-mapping').addEventListener('change', function() {
       const highEnabled = this.checked;
       document.getElementById('high-density-slider').disabled = !highEnabled;
@@ -323,19 +323,18 @@
       document.getElementById('high-density-grid-number').disabled = !highEnabled;
     });
 
-    // Update displayed slider values for tolerance sliders (low only)
+    // Tolerance slider
     document.getElementById('low-tolerance-slider').addEventListener('input', function() {
       document.getElementById('low-tolerance-value').textContent = this.value;
     });
 
-    // Sync distance slider and number input for minimum distance
+    // Min/Max distance sync
     document.getElementById('min-distance-slider').addEventListener('input', function() {
       document.getElementById('min-distance-number').value = this.value;
     });
     document.getElementById('min-distance-number').addEventListener('input', function() {
       document.getElementById('min-distance-slider').value = this.value;
     });
-    // Sync distance slider and number input for maximum distance
     document.getElementById('max-distance-slider').addEventListener('input', function() {
       document.getElementById('max-distance-number').value = this.value;
     });
@@ -343,7 +342,7 @@
       document.getElementById('max-distance-slider').value = this.value;
     });
 
-    // Sync low density slider and number input
+    // Low density slider
     document.getElementById('low-density-slider').addEventListener('input', function() {
       document.getElementById('low-density-number').value = this.value;
       document.getElementById('low-density-value').textContent = this.value;
@@ -353,7 +352,7 @@
       document.getElementById('low-density-value').textContent = this.value;
     });
 
-    // Sync high density slider and number input (distance X)
+    // High density distance slider
     document.getElementById('high-density-slider').addEventListener('input', function() {
       document.getElementById('high-density-number').value = this.value;
       document.getElementById('high-density-value').textContent = this.value;
@@ -363,20 +362,18 @@
       document.getElementById('high-density-value').textContent = this.value;
     });
 
-    // Sync high density "count" slider
+    // High density star-count slider
     document.getElementById('high-density-count-slider').addEventListener('input', function() {
       document.getElementById('high-density-count-value').textContent = this.value;
     });
 
-    // Sync low density grid slider and number input
+    // Subdivision "levels" sync (just 1..10)
     document.getElementById('low-density-grid-slider').addEventListener('input', function() {
       document.getElementById('low-density-grid-number').value = this.value;
     });
     document.getElementById('low-density-grid-number').addEventListener('input', function() {
       document.getElementById('low-density-grid-slider').value = this.value;
     });
-
-    // Sync high density grid slider and number input
     document.getElementById('high-density-grid-slider').addEventListener('input', function() {
       document.getElementById('high-density-grid-number').value = this.value;
     });
@@ -384,7 +381,12 @@
       document.getElementById('high-density-grid-slider').value = this.value;
     });
 
-    // Fullscreen button listeners
+    // Connection slider
+    document.getElementById('connection-slider').addEventListener('input', function() {
+      document.getElementById('connection-value').textContent = this.value;
+    });
+
+    // Fullscreen button
     document.querySelectorAll('.fullscreen-btn').forEach(btn => {
       btn.addEventListener('click', function() {
         const mapContainer = this.parentElement;
@@ -399,7 +401,7 @@
       });
     });
 
-    // Adjust canvas on fullscreen exit
+    // On fullscreen exit
     document.addEventListener("fullscreenchange", function() {
       if (!document.fullscreenElement) {
         document.querySelectorAll('.map-container canvas').forEach(canvas => {
